# fast-python-mongo-demo

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-to-ecr.yaml  docker-build.yml
app/: main.py
local/: docker-compose.yaml
